syntax = "proto3";

package pb;

message Login {
  string Account = 1;
  string Passwd = 2;
}

message LoginAck {
  string Token = 1;
}