syntax = "proto3";

package pb;

import "user.proto";

service User {
  rpc RpcUserLogin(UserLogic.Login) returns (UserLogic.LoginAck) ;
}

